# mageni

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.txt  mageni.code-workspace  pull_request_template.md  sbom_laravel.json  sbom_ubuntu.json
backend/api/src/: CMakeLists.txt  gmp.h  gmp_delete.c  gmp_get.h  gmp_tickets.c  gvmd.c  gvmd_log_conf.cmake_in  lsc_crypt.c  lsc_crypt.h  lsc_user.c  manage.c  manage_acl.c  manage_acl.h  manage_migrators.c  manage_ranges_all_tcp_nmap_5_51_top_1000.c  manage_ranges_iana_tcp_2012.c  manage_ranges_iana_tcp_udp_2012.c  manage_ranges_nmap_5_51_top_2000_top_100.c  manage_sql.c  manage_sql_nvts.h  manage_sql_secinfo.c  manage_sqlite3.c  manage_tickets.h  manage_utils.c  otp.h  sql_sqlite3.c  sqlite_log_conf.cmake_in  utils.c
backend/libraries/: CMakeLists.txt
backend/libraries/base/: CMakeLists.txt  array.c  credentials.h  cvss.c  cvss.h  drop_privileges.c  libgvm_base.pc.in  pidfile.c  proctitle.c  proctitle.h  pwpolicy.c  pwpolicy.h  settings.c  strings.c  strings.h
backend/libraries/gmp/: CMakeLists.txt  gmp.c  gmp.h
backend/libraries/osp/: CMakeLists.txt  osp.c  osp.h
backend/libraries/util/: CMakeLists.txt  compressutils.c  compressutils.h  fileutils.h  radiusutils.c  radiusutils.h  uuidutils.c  xmlutils.h
backend/scanner/misc/: CMakeLists.txt  bpf_share.c
backend/scanner/nasl/: CMakeLists.txt  charcnv.c  genrand.c  nasl.c  nasl_builtin_find_service.c  nasl_builtin_openvas_tcp_scanner.c  nasl_cmd_exec.c  nasl_grammar.tab.c  nasl_misc_funcs.c  nasl_scanner_glue.c  nasl_signature.c  nasl_ssh.c  nasl_text_utils.c
sqlite/: CMakeLists.txt
sqlite/cmake/: GetGit.cmake
sqlite/doc/: database-statistics-sqlite.8  database-statistics-sqlite.8.xml  gvmd.8  gvmd.8.xml  gvmd.html  icalendar-schedules  report-format-HOWTO  user-scap-data-HOWTO  vfire-data-xml.rnc
sqlite/report_formats/: README
sqlite/report_formats/HTML/: HTML.xsl  generate
sqlite/report_formats/IVIL/: IVIL.xsl  generate
sqlite/report_formats/ZIP/: create_report_import  generate
sqlite/report_formats/simple_bar_chart/: create_report_import  generate  plot-plt.xsl  plot.xsl
sqlite/report_formats/simple_map_plot/: README.txt  create_report_import  fonts.txt  generate  hosts.vrt  join.awk  locations.csv  non-georeferenced.dot  non-georeferenced.map  report_to_csv_host.xsl  world_map.map  world_map.tiff
sqlite/report_formats/simple_pie_chart/: create_report_import  generate  pieplot.xsl
sqlite/report_formats/simple_topo_plot/: create_report_import  generate  hostvisdot-summary.xsl
sqlite/report_formats/sourcefire/: create_report_import  generate  sourcefire.xsl
sqlite/report_formats/tls-map/: create_report_import  generate  tls-map.xsl
sqlite/src/: CMakeLists.txt  comm.c  gmp.c  gmp_base.c  gmp_base.h  gmp_delete.h  gmp_get.c  gmp_tickets.h  gmpd.h  iterator.h  lsc_user.h  manage.c  manage.h  manage_config_discovery.c  manage_config_host_discovery.c  manage_config_system_discovery.c  manage_ranges_all_tcp_nmap_5_51_top_100.c  manage_sql.h  manage_sql_secinfo.h  manage_sql_tickets.h  manage_utils.h  pwpolicy.conf.in  scanner.c  scanner.h  sql.c  sql.h  sql_sqlite3.c  types.h  utils.h
sqlite/src/alert_methods/SCP/: alert
sqlite/src/alert_methods/SMB/: alert
sqlite/src/alert_methods/SNMP/: alert
sqlite/src/alert_methods/Send/: alert
sqlite/src/alert_methods/Sourcefire/: alert
sqlite/src/alert_methods/TippingPoint/: alert  report-convert.py
sqlite/src/alert_methods/vFire/: alert
sqlite/src/alert_methods/verinice/: alert
sqlite/src/report_formats/: create_signatures
sqlite/src/report_formats/ARF/: ARF.xsl  generate  report_format.xml
sqlite/src/report_formats/Anonymous_XML/: Anonymous_XML.xsl  generate  report_format.xml
sqlite/src/report_formats/CPE/: CPE.xsl  generate  report_format.xml
sqlite/src/report_formats/CSV_Hosts/: CSV_Hosts.xsl  generate  report_format.xml
sqlite/src/report_formats/CSV_Results/: CSV_Results.xsl  generate  report_format.xml
sqlite/src/report_formats/HTML/: HTML.xsl  generate  report_format.xml
sqlite/src/report_formats/ITG/: ITG.xsl  generate  report_format.xml
sqlite/src/report_formats/LaTeX/: generate  latex.xsl  report_format.xml
sqlite/src/report_formats/NBE/: NBE.xsl  generate  report_format.xml
sqlite/src/report_formats/PDF/: generate  report_format.xml
sqlite/src/report_formats/TXT/: TXT.xsl  generate  report_format.xml
sqlite/src/report_formats/Topology/: hostvisdot-summary.xsl  report_format.xml
sqlite/src/report_formats/Verinice_ISM/: README.txt  Verinice_ISM.xsl  classification.csv  classification.xsl  (+3 more)
sqlite/src/wizards/: delete_task_deep.xml  get_tasks_deep.xml  modify_task.xml  quick_auth_scan.xml  quick_first_scan.xml  quick_task.xml  reset_task.xml
sqlite/tools/: cert_bund_getbyname.xsl  cpe_getbyname.xsl  cve_getbyname.xsl  database-statistics-sqlite  dfn_cert_getbyname.xsl  greenbone-certdata-sync.in  greenbone-scapdata-sync.in  gvm-lsc-deb-creator.sh  gvm-lsc-rpm-creator.sh  gvm-migrate-to-postgres.in  gvm-portnames-update.in  ovaldef_getbyname.xsl
src/backend/scanner/: CMakeLists.txt  COPYING
vscand/: CMakeLists.txt
vscand/doc/crond/: mageni-service-update.in
vscand/doc/redis_config_examples/: redis_3_2.conf.in  redis_m_0.in
vscand/doc/smb3.1.1/: smbcl_getversion.nasl  win_CVE-2007-0043.nasl
vscand/doc/sudoersd/: mageni-service-init.in
vscand/doc/systemd/: dhparam-pem.in  mageni-nginx-ssl-params-conf.in  mageni-scanner-start.in  mageni-sqlite-start.in  mageni-vscand.service.in  preinst
vscand/misc/: ftp_funcs.c  network.c  network.h  pcap.c  plugutils.c  plugutils.h
vscand/nasl/: capture_packet.c  exec.c  iconv.c  nasl-lint.c  nasl_builtin_synscan.c  nasl_cert.c  nasl_crypto.c  nasl_crypto2.c  nasl_debug.c  nasl_global_ctxt.h  nasl_grammar.output  nasl_grammar.tab.h  nasl_grammar.y  nasl_host.c  nasl_http.c  nasl_packet_forgery.c  nasl_packet_forgery_v6.c  nasl_snmp.c  nasl_var.c  nasl_wmi.c
vscand/src/: comm.h  pluginload.c  pluginload.h  pluginscheduler.c  plugs_req.h  processes.c  sighand.c
(+129420 files in other folders)
